# code-recall

./: .gitignore  LICENSE  README.md  claude-memory.service  code-recall-consolidate.service  code-recall-consolidate.timer  code-recall.service  daemon.py  pyproject.toml
code_recall/: _mem0.py  consolidate.py  daemon.py  extract.py  prompts.py  reingest.py
hooks/: capture.sh  format-memories.jq  recall.sh
memory/: _mem0.py  extract.py  prompts.py
